fix code show not entirely on iphone's safari

--- a/docs/themes/material/source/css/highlight.css
+++ b/docs/themes/material/source/css/highlight.css
@@ -52,7 +52,10 @@ pre code {
 .highlight pre {
   border: none;
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
   white-space: pre;
 }
 
