--- a/docs/themes/material/source/css/highlight.light.css
+++ b/docs/themes/material/source/css/highlight.light.css
@@ -60,7 +60,10 @@ figure.highlight figcaption a {
 }
 figure.highlight pre {
   border: none;
-  padding: 0;
+  /* padding: 0; */
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
   margin: 0;
 }
 figure.highlight table {
